crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__binop_leading_plus_newline.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "a\n    + b\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 8,
        },
    },
    value: BinOps {
        operands: [
            BinOpOperand {
                expr: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 2,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                op: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: Add,
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 7,
                },
                end: Position {
                    line: 2,
                    column: 8,
                },
            },
            value: Var(
                "b",
            ),
        },
    },
}
